--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    
+    <script src="https://api-maps.yandex.ru/v3/?apikey=cfe35ad5-e994-43b9-a9e1-609f4a572206&lang=ru_RU"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
